--- a/style.css
+++ b/style.css
@@ -1,68 +1,104 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-body{
-    background-color: #f2f9ed;
-    font-family: Poppins;
+body {
+  background-color: #f2f9ed;
+  font-family: Poppins;
 }
-.heading{
-    text-align: center;
-    color: #48A300;
-    font-weight: 700;
-    margin: 2.2em 0;
-    font-size: 1.5rem;
+.heading {
+  text-align: center;
+  color: #48a300;
+  font-weight: 700;
+  margin: 2.2em 0;
+  font-size: 1.5rem;
 }
-#today{
-    color: #61481C;
+#today {
+  color: #61481c;
 }
-.main{
-    background-color: #FBFBFB;
-    width: 100%;
-    max-width: 660px;
-    margin: 0 auto;
-    border-radius: 10px;
+.main {
+  background-color: #fbfbfb;
+  width: 100%;
+  max-width: 660px;
+  margin: 0 auto;
+  border-radius: 13px;
+  margin-bottom: 10em;
 }
-.main-container{
-    margin: 0 2em;
-    padding: 2em 0;
+.main-container {
+  margin: 0 2em;
+  padding: 2em 0;
 }
-.main-heading{
-    display: flex;
-    align-items: center;
+.main-heading {
+  display: flex;
+  align-items: center;
 }
-.main-heading h2{
-    display: inline-block;
-    font-size: 2rem;
-    margin-right: 0.8em;
+.main-heading h2 {
+  display: inline-block;
+  font-size: 2rem;
+  margin-right: 0.8em;
 }
-.motivative-text{
-    font-weight: 200;
-    color: #858585;
-    margin-top: 1.5em;
+.motivative-text {
+  font-weight: 200;
+  color: #858585;
+  margin-top: 1.5em;
 }
-.progress-bar{
-    background-color: rgba(73, 163, 0, 0.1);
-    width: 100%;
-    border-radius: 15px;
-    margin-top: 1.2em;
+.progress-bar {
+  background-color: rgba(73, 163, 0, 0.1);
+  width: 100%;
+  border-radius: 15px;
+  margin-top: 1.2em;
 }
 .progress {
-    width: 33%;
-    height: 30px;
-    background-color: rgba(72, 163, 0, 1);
-    border-radius: 15px;
-    color: white;
+  width: 33%;
+  height: 30px;
+  background-color: rgba(72, 163, 0, 1);
+  border-radius: 15px;
+  color: white;
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
+.progress p {
+  margin-left: 2em;
+  font-size: 0.8rem;
+}
+.error {
+  color: rgba(255, 81, 81, 1);
+  font-size: 0.9rem;
+  margin-top: 1.2em;
+}
+#input-elements {
+  margin-top: 1em;
+}
+.input {
+  margin-bottom: 1.5em;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  color: rgba(217, 217, 217, 1);
+  background-color: white;
+  border-radius: 12px;
+  display: flex;
+  padding: 1.5em 1.5em;
+}
+.checkbox-input {
+  accent-color: #48a300;
+}
+.text-input {
+  background: transparent;
+  border: none;
+  margin-left: 1em;
+}
+.text-input:focus {
+  outline: none;
+}
+.quote{
     text-align: center;
-    display: flex;
-    align-items: center;
+    font-weight: 500;
+    margin-top: 2.7em;
 }
-.progress p{
-    margin-left: 2em;
-    font-size: 0.8rem;
-}
-.error{
-    color: rgba(255, 81, 81, 1);
-    font-size: 0.9rem;
-    margin-top: 1.2em;
+.footer{
+    text-align: center;
+    color: rgba(133, 133, 133, 1);
+    font-size: 0.7rem;
+    margin-top: 5em;
+    margin-bottom: 2em;
 }
